# dargon-lang

./: .gitignore  CMakeLists.txt  LICENSE  Log.txt  README.md  dargon.cbp  dargon.depend  dargon.layout  main.cpp
.obsidian/: appearance.json  workspace.json
doc/: Dargon Design Document.txt  Dargon Lang Specification.md  Dargon Language Specification.odt  Dargon Reserved Words.md  Dargon Tutorial.md  Dargon Tutorial.odt  Dargon.doxyfile  Dargon_Interpreter_v1  Grammar.md  GuessingGame.dargon  Programming Style.md  Simplified Dargon Spec.md  declarations  template.h
doc/.obsidian/: workspace.json
examples/: GuessingGame.dargon  Test1.dg  fib.dargon  guessing_game.dargon  read_file.dargon
examples/tutorial/: Declare.dargon  Functions.dargon
include/: CLI.h  Lexer.h  Log.h  Output.h  Token.h  Utility.h  Version.h
proj/: TEST.dargon  dargon.cbp
res/text_highlighting/: Instructions.md
res/text_highlighting/gtksourceview/: dargon.lang
src/: CLI.cpp  Dargon  Exception.cpp  Lexer.cpp  Log.cpp  README.md  Token.cpp  Utility.cpp  drgCommon.h  drgFile.c  drgFile.h  drgLog.c  drgLog.h  drgMemUtil.h  drgNugget.c  drgNugget.h  drgStrUtil.c  drgStrUtil.h  drgVM.c  drgVM.h  drgValue.c  drgValue.h  drgVersion.h  main.c  main.cpp
src/core/: CLI.cpp  CLI.h  DIR.cpp  DIR.h  Error.h  Exception.cpp  Exception.h  Expr.h  File.cpp  File.h  FilePosition.h  IO.h  Lexer.cpp  Lexer.h  Log.cpp  Log.h  Module.cpp  Module.h  Output.h  Path.cpp  Path.h  Utility.cpp  Utility.h  Version.cpp  Version.h
src/core/ast/: ASTPrinter.cpp  ASTPrinter.h  Expr.h  Visitor.h
src/core/io/: ConfigFile.cpp  ConfigFile.h  (+8 more)
src/scanner/: Scanner.c  Scanner.h  Token.h
src/test/: ASTTests.h  FileTests.h  LexerTests.h  Test.h  TestResult.h  TestingMacros.h  TokenUnitTest.h  UnitTest.h  UnitTester.h
src/tools/: Expr.h  GenDargonStmtExpr.py
src/util/: Log.c  Log.h  Toolbox.h  Version.h  drgMemUtil.c  drgMemUtil.h
src/vm/: Common.cpp  Common.h  DynamicArray.h  Nugget.cpp  Nugget.h  Stack.h  VM.c  VM.h  VMArrays.h  VMCommon.cpp  VMCommon.h  VMDisassembler.h  VMDissasembler.cpp  VMInstruction.cpp  VMInstruction.h  VirtualMachine.cpp  VirtualMachine.h  drgNugget.c  drgNugget.h  drgValue.c  drgValue.h
tools/: GenDargonStmtExpr.py
web/: index.html  style.css
(+11 files in other folders)
